# agent_prod

./: .env.example  README.md  main.py  pyproject.toml  run_api.py  run_worker.py
api/: server.py
app/: run_api.py  run_tasks_api.py  run_worker.py  run_worker_api.py
app/agents/: __init__.py  mock_agent.py
app/api/: tasks.py  worker_api.py
app/core/: config.py  logging.py
app/models/: task.py
app/self_agents/: __init__.py  base_agent.py  mock_agent.py
app/services/: proxy_agent.py  redis_service.py  rocketmq_service.py
common/: config.py  redis_client.py
tests/: test_full_flow.py
worker/: agent_logic.py  consumer.py
